// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-geXuza hHPJKb aje-select sc-bMTdWJ bFXpNa aje-select aje-select--default"
  >
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        style="font-size: 16px;"
        tabindex="-1"
        type="text"
      />
      <label>
        <select
          tabindex="-1"
        >
          <option />
          <option
            value="react-aria-1"
          >
            Item 1
          </option>
          <option
            value="react-aria-2"
          >
            Item 2
          </option>
        </select>
      </label>
    </div>
    <label
      class="sc-egkSDF lbEJIl"
      id="react-aria-:r3:"
    >
      Custom dropdown label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-eOzmre QIvdV aje-btn sc-fwzISk gsuoQe aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      type="button"
    >
      <span
        class="sc-hJRrWL eXmnCK"
        id="react-aria-:r7:"
      >
        Select an option
      </span>
      <i
        aria-hidden="true"
        class="sc-khLCKb gRpvEI aje-icon material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-geXuza hHPJKb aje-select sc-bMTdWJ bFXpNa aje-select aje-select--floating aje-select--floating"
  >
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <input
        style="font-size: 16px;"
        tabindex="-1"
        type="text"
      />
      <label>
        <select
          tabindex="-1"
        >
          <option />
          <option
            value="react-aria-1"
          >
            Item 1
          </option>
          <option
            value="react-aria-2"
          >
            Item 2
          </option>
        </select>
      </label>
    </div>
    <div
      class="sc-hbtGpV fgifvA"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
        class="sc-eOzmre QIvdV aje-btn sc-fwzISk gsuoQe aje-btn--floating is-medium"
        id="react-aria-:ra:"
        type="button"
      >
        <span
          class="sc-hJRrWL eXmnCK"
          id="react-aria-:rf:"
        />
        <i
          aria-hidden="true"
          class="sc-khLCKb gRpvEI aje-icon material-icons is-medium"
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-egkSDF lbEJIl"
        id="react-aria-:rb:"
      >
        Custom dropdown label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
